[project]
name = "02-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.135.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
]

[[tool.uv.index]]
url = "https://package-mirror.liara.ir/repository/pypi/simple"
default = true
